feat: add doc for refresh token
