# cmd/api/docs/swagger.json
@@ -159,6 +159,38 @@
                 }
             }
         },
+        "/v1/auth/refresh": {
+            "post": {
+                "description": "Refresh Previous Access Token",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Refresh access token",
+                "responses": {
+                    "200": {
+                        "description": "Return Redirect URL to continue Login with google",
+                        "schema": {
+                            "$ref": "#/definitions/main.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.GeneralErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.InternalServerErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/auth/register": {
             "post": {
                 "description": "Signup for an account",
@@ -297,7 +329,7 @@
         "main.LoginResponse": {
             "type": "object",
             "properties": {
-                "token": {
+                "acessToken": {
                     "type": "string"
                 }
             }
